# europython2019_golang_to_python

./: .gitignore  README.md  build_macos.sh  europython_2019.sublime-workspace  open_subl.sh
cpp/: CMakeLists.txt
cpp/cpp_personlib/: main.cpp
cpp/cpp_queue/: a.out  theadsafe_queue.h
go/: cgo_simple_build_lvl2.sh  set_gopath.sh
go/cgo_lib/: cgo_lib.h
go/notes/: notes.txt
go/src/com.stbaer/demo_cgo/: cgo_support.cpp  cgo_support.h  main.go
go/src/com.stbaer/demo_cgo/cgo_lib_simple/: cgo_main.go  cgo_objectstore_person.go  cgo_person_wrapper.go
go/src/com.stbaer/demo_go/main_lib_simple/: person.go
lvl1/cpp/: CMakeLists.txt
lvl1/cpp/cgo_lib/: main.h
lvl1/go/: cgo_build.sh
lvl1/go/src/com.stbaer/demo_cgo/: main.go
lvl1/go/src/com.stbaer/demo_go/main_lib_simple/: person.go
lvl2/common/: lvl2_cgo_support.cpp  lvl2_cgo_support.h
lvl2/cpp/: CMakeLists.txt  main.cpp
lvl2/cpp/cgo_support/: main.cpp
lvl2/cpp/cpp_personlib/: main.cpp  person.cpp  person.h
lvl2/cpp/cpp_queue/: main.cpp
lvl2/go/: cgo_build_lvl2.sh  cgo_simple_build_lvl2.sh
lvl2/go/src/com.stbaer/demo_cgo/: lvl2_cgo_support.cpp  lvl2_cgo_support.h  main.go
lvl2/go/src/com.stbaer/demo_cgo/cgo_lib_simple/: cgo_objectstore_person.go
lvl2/go/src/com.stbaer/demo_go/: main.go
lvl2/py/: build_cython.sh  cgo_cython.pyx  cgo_cython_lvl2.pyx  person.py  person.pyx  run.py  setup.py
lvl2/py/cgo_support/: lvl2_cgo_support.cpp  lvl2_cgo_support.h
py/: build_cython.sh  cgo_cython.cpp  cgo_cython_lvl2.cpp  person.cpp  run.py  setup.py  setup2.py
(+1 files in other folders)
